--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,7 +7,7 @@ html {
 body {
     height: 100%;
     width: 100%;
-    background-color:white;    
+    background-color: rgb(51, 51, 51);    
  }
 
  svg {
