--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 html {
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
  }
 body {
     height: 100%;
@@ -20,6 +20,15 @@ div{
     padding: 0px;
     border-spacing: 0px;
  }
+h1{
+  font-family: 'VT323', monospace;
+}
+img {
+  padding:1px;
+  border:1px solid #021a40;
+  background-color:rgb(0, 255, 76);
+}
+
 
 
  .button {
