--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,8 +25,7 @@ h1{
 }
 img {
   padding:1px;
-  border:1px solid #021a40;
-  background-color:rgb(0, 255, 76);
+  border:1px solid #ffffff;
 }
 
 .rainbow {
@@ -102,8 +101,12 @@ img {
 }
 
 .medium-btn {
-  width: auto;
+  width: auto+5px;
   height: auto;
+  font-family: 'VT323', monospace;
+  font-size: 1.5em;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .big-btn {
