--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 html {
     height: auto;
-    width: auto;
+    width: 200%;
  }
 body {
     height: 100%;
@@ -24,8 +24,15 @@ h1{
   font-family: 'VT323', monospace;
 }
 img {
-  padding:1px;
-  border:1px solid #ffffff;
+  border-color: gray;
+  border:5px solid gray;
+  padding: 10px;
+}
+
+canvas {
+  border-color: black;
+  border:5px solid black;
+  padding: 5px;
 }
 
 .rainbow {
