--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -25,19 +25,16 @@ h1{
 }
 img {
   border-color: gray;
-  border:5px solid gray;
-  padding: 10px;
+  border:4px solid gray;
+  padding: 5px;
 }
 
 canvas {
-  padding: 10px;
+  margin: 15px;
+  box-shadow: var(--box-shadow-color) 0 0 10px 10px;
 }
 
-.containerBorder {
-  border-color: black;
-  border: 5px;
-  
-}
+
 
 .rainbow {
   /* Chrome, Safari, Opera */
