--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,6 +12,7 @@ body {
   height: 100%;
   width: 100%;
   border-spacing: 0px;
+  box-shadow: var(--box-shadow-color) 0 0 5px 5px;
 }
 div{
   height: relative;
